--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "My webpack project, portfolio draft",
   "main": "index.js",
+  "homepage": "https://mheerspink75.github.io/portfolio_draft/",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
-  "author": "",
+  "author": "Matt Heerspink",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -25,5 +27,8 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
     "workbox-webpack-plugin": "^6.3.0"
+  },
+  "dependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
